# upm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: IFF_CHARMM36_metal_and_alumina_phases_V8.prm  cvff_IFF_metal_oxides_v2.frc
docs/: API.md  DATA_PACKAGE.md  MIGRATION_v1_to_v2.md
docs/DevGuides/: DevGuide_v0.1.0.md  v0.1.0_report.md
src/upm/: __init__.py
src/upm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/upm/bundle/: __init__.py  io.py  manifest.py
src/upm/cli/: __init__.py  main.py
src/upm/codecs/: __init__.py  _charmm_parser.py  _charmm_writer.py  _frc_parser.py  _frc_parser_ext.py  _frc_writer.py  charmm_prm.py  msi_frc.py
src/upm/compose/: __init__.py  export.py  layers.py
src/upm/core/: __init__.py  (+4 more)
tests/: conftest.py  test_build_frc_from_existing.py  test_build_frc_from_scratch_nonbond_only.py  test_build_frc_generic_bonded.py  test_bundle_roundtrip.py  test_bundle_v2_schema.py  test_charmm_prm_codec.py  test_charmm_prm_stub.py  test_cli_export_frc_semantics.py  test_compose.py  test_cross_format.py  test_filter_frc_tables.py  test_frc_builder.py  test_frc_import_export_roundtrip.py  test_frc_torsion_oop_equiv_parsing.py  test_msi_frc_codec.py  test_registry.py  test_registry_key_indexes.py  test_requirements_io.py  test_resolve_minimal_subset.py  test_tables_validation.py  test_termset_parameterset_io_v0_1_2.py  test_topology_extractor.py  test_torsion_oop_equiv_schemas.py
workspaces/00_quickcheck_import_export/: run.py
workspaces/01_minimal_subset_export/: requirements.json  run.py
(+21 files in other folders)
