[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upm"
version = "0.1.0"
description = "Unified Parameter Model (UPM)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "mypy>=1.8",
]

[project.scripts]
upm = "upm.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
